--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/detalle-recibo-satisfaccion/detalle-recibo-satisfaccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/detalle-recibo-satisfaccion/detalle-recibo-satisfaccion.component.html
@@ -7,11 +7,11 @@
   <mat-card-content>
     <p>
       <strong> URL Acta de recibo a satisfaccion - Obra: </strong>
-      {{ report.informeFinal[0].urlActa }}
+      {{ report.proyecto.informeFinal[0].urlActa }}
     </p>
     <p>
       <strong> Fecha de suscripción: </strong>
-      {{ report.informeFinal[0].fechaSuscripcion | date:'dd/MM/yyyy'}}
+      {{ report.proyecto.informeFinal[0].fechaSuscripcion | date:'dd/MM/yyyy'}}
     </p>
   </mat-card-content>
 </mat-card>
