--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/form-recibo-a-satisfaccion/form-recibo-a-satisfaccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/form-recibo-a-satisfaccion/form-recibo-a-satisfaccion.component.html
@@ -106,7 +106,7 @@
     </mat-card-content>
   </mat-card>
   <div class="text-center mb-2em">
-    <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="addressForm.invalid">
+    <button mat-button color="warn" class="btn-guardar" type="submit">
       <img src="assets/img/icon/guardar.svg" alt="Guardar" />
     </button>
   </div>
