--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/registrar-informe-final/registrar-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/registrar-informe-final/registrar-informe-final.component.html
@@ -12,7 +12,7 @@
     <p class="colorMainColor mt-05em"> 
       Fecha de terminación del proyecto
       <b *ngIf="report">
-        {{ report.contratacion.contrato[0].fechaTerminacion  | date:'dd/MM/yyyy' }}
+        {{ report.proyecto.contratacionProyecto[0].contratacion.contrato[0].fechaTerminacion  | date:'dd/MM/yyyy' }}
       </b>
     </p>
   </div>
