--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-generar-orden-giro/form-generar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-generar-orden-giro/form-generar-orden-giro.component.html
@@ -32,7 +32,7 @@
                     Información general
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <app-accordion-info-general-gog></app-accordion-info-general-gog>
+            <app-accordion-info-general-gog [solicitudPago]="solicitudPago"></app-accordion-info-general-gog>
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
