--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/generar-orden-giro/generar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/generar-orden-giro/generar-orden-giro.component.html
@@ -20,7 +20,7 @@
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
             <ng-container matColumnDef="fechaValidacionFinanciera">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 14%;"> Fecha de validación financiera </th>
-                <td mat-cell *matCellDef="let element" align="center"> <b>{{ 'Funcionalidad pendiente' }}</b> </td>
+                <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaAprobacionFinanciera | date: 'dd/MM/yyyy' }}</b> </td>
             </ng-container>
             <ng-container matColumnDef="numeroSolicitud">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 12%;"> Número de solicitud </th>
