--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/dialog-observaciones/dialog-observaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/dialog-observaciones/dialog-observaciones.component.html
@@ -13,11 +13,10 @@
   </h1>
   <p>
     Estado del requisito:
-    <b> No Cumple </b>
+    <b> {{ data.informe.calificacionCodigoString }} </b>
   </p>
   <p>
-    <b> 3. </b>
-    Informe final de Obra del contratista de obra
+    <b>{{ data.informe.nombre }}</b>  
   </p>
 </div>
 
