avance  pantallas del front y unos bugs del 5.1.1

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/dialog-observaciones/dialog-observaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/dialog-observaciones/dialog-observaciones.component.html
@@ -36,9 +36,15 @@
     </span>
   </div>
 
-  <div class="row justify-content-center mt-1em mb-1em">
-    <button mat-raised-button color="accent" type="submit" [disabled]="observaciones.get('observaciones').invalid">
-      Guardar
+  <div class="text-center">
+    <button
+      mat-button
+      color="warn"
+      class="btn-guardar"
+      type="submit"
+      [disabled]="observaciones.get('observaciones').invalid"
+    >
+      <img src="assets/img/icon/guardar.svg" alt="Guardar" />
     </button>
   </div>
 </form>
