--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
@@ -1,1 +1,110 @@
-<p>tabla-informe-final works!</p>
+<div class="busqueda">
+  <mat-form-field appearance="outline" class="busqueda--input">
+    <mat-label>Buscador / Filtro</mat-label>
+    <input matInput #filtro (keyup)="applyFilter($event)" />
+  </mat-form-field>
+  <button mat-button color="primary" class="busqueda--img" (click)="filtro.focus()">
+    <img src="assets/img/icon/lupa.svg" alt="Buscar" />
+  </button>
+</div>
+
+<div class="table-responsive mb-2em">
+  <table mat-table [dataSource]="dataSource" matSort>
+    <!-- fechaEnvio Column -->
+    <ng-container matColumnDef="fechaEnvio">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Fecha de envío del informe final
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <b>{{ element.fechaEnvio }}</b>
+      </td>
+    </ng-container>
+
+    <!-- llaveMen Column -->
+    <ng-container matColumnDef="llaveMen">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Llave MEN
+      </th>
+      <td mat-cell *matCellDef="let element">{{ element.llaveMen }}</td>
+    </ng-container>
+
+    <!-- tipoIntervencion Column -->
+    <ng-container matColumnDef="tipoIntervencion">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Tipo de intervención
+      </th>
+      <td mat-cell *matCellDef="let element">{{ element.tipoIntervencion }}</td>
+    </ng-container>
+
+    <!-- institucionEducativa Column -->
+    <ng-container matColumnDef="institucionEducativa">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Institución Educativa
+      </th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.institucionEducativa }}
+      </td>
+    </ng-container>
+
+    <!-- sedeEducativa Column -->
+    <ng-container matColumnDef="sedeEducativa">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Sede
+      </th>
+      <td mat-cell *matCellDef="let element">{{ element.sedeEducativa }}</td>
+    </ng-container>
+
+    <!-- estadoVerificacion Column -->
+    <ng-container matColumnDef="estadoVerificacion">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Estado de la verificación
+      </th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.estadoVerificacion }}
+      </td>
+    </ng-container>
+
+    <!-- registroCompleto Column -->
+    <ng-container matColumnDef="registroCompleto">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Estado del registro
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <span
+          class="info-text d-block m-0"
+          [class.sin-diligenciar]="element.registroCompleto === 'Incompleto'"
+          [class.completo]="element.registroCompleto === true"
+        ></span>
+        {{ element.registroCompleto }}
+      </td>
+    </ng-container>
+
+    <!-- contratacionProyectoId Column -->
+    <ng-container matColumnDef="contratacionProyectoId">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Gestión
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <a
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          [routerLink]="['verificar', element.contratacionProyectoId]"
+        >
+          Verificar informe
+        </a>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+</div>
+<mat-paginator
+  #paginator
+  [length]="dataSource?.data.length"
+  [pageIndex]="0"
+  [pageSize]="5"
+  [pageSizeOptions]="[5, 10, 25, 100]"
+></mat-paginator>
