--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-incorporacion-rendimientos/components/aprobar-incorporacion-rendimientos/aprobar-incorporacion-rendimientos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-incorporacion-rendimientos/components/aprobar-incorporacion-rendimientos/aprobar-incorporacion-rendimientos.component.html
@@ -26,34 +26,34 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de cargue </th>
                 <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaCargue | date: "dd/mm/yyyy" }}</b> </td>
             </ng-container>
-            <ng-container matColumnDef="totalRegistros">
+            <ng-container matColumnDef="registrosIncorporados">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número total de registros incorporados</th>
-                <td mat-cell *matCellDef="let element" align="center"> <em>{{ element.totalRegistros }}</em> </td>
+                <td mat-cell *matCellDef="let element" align="center"> <em>{{ element.registrosIncorporados == 0 ? '--': element.registrosIncorporados}}</em> </td>
             </ng-container>
             <ng-container matColumnDef="gestion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-25"> Gestión </th>
                 <td mat-cell *matCellDef="let element" align="center">
-                    <!--
-                    <button mat-raised-button color="accent" class="btn-table" *ngIf="element.numTotalRegistrosIncorporados==''">
+                    <button mat-raised-button color="accent" class="btn-table" *ngIf="element.registrosIncorporados == 0"
+                        (click)="includePerformances(element)"
+                    >
                         Incorporar rendimientos
                     </button>
-                    <button mat-raised-button color="accent" class="btn-table" *ngIf="element.numTotalRegistrosIncorporados==''">
+                     <button mat-raised-button color="accent" class="btn-table" *ngIf="element.registrosIncorporados == 0"
+                      (click)="downloadConsistencies(element.cargaPagosRendimientosId)"
+                     >
                         Ver registros consistentes
                     </button>
-                    <button mat-raised-button color="accent" class="btn-table" *ngIf="element.numTotalRegistrosIncorporados!=''">
+                    <button mat-raised-button color="accent" class="btn-table" *ngIf="element.registrosIncorporados > 0">
                         Generar Acta
                     </button>
-                    <button mat-raised-button color="accent" class="btn-table" *ngIf="element.numTotalRegistrosIncorporados!=''"
-                    (click)="this.cargarActaFirmada();">
+                    <button mat-raised-button color="accent" class="btn-table" *ngIf="element.registrosIncorporados > 0"
+                    (click)="uploadSignedMinutes();">
                         Cargar acta firmada
                     </button>
-                    <button mat-raised-button color="accent" class="btn-table" *ngIf="element.numTotalRegistrosIncorporados!=''">
+                    <button mat-raised-button color="accent" class="btn-table" *ngIf="element.registrosIncorporados > 0">
                         Ver registros incorporados
                     </button>
-                    
-
-                    -->
-                    <button mat-raised-button color="accent" class="btn-table" *ngIf="element.numTotalRegistrosIncorporados!=''">
+                    <button mat-raised-button color="accent" class="btn-table" *ngIf="element.acta">
                        Descargar Acta
                     </button>
                 </td>
