--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-info-general-gog/accordion-info-general-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-info-general-gog/accordion-info-general-gog.component.html
@@ -74,7 +74,7 @@
                     Tercero de giro
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <app-form-tercero-giro-gog></app-form-tercero-giro-gog>
+            <app-form-tercero-giro-gog [solicitudPago]="solicitudPago"></app-form-tercero-giro-gog>
         </mat-expansion-panel>
     </mat-accordion>
 </section>
