--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-generar-orden-giro/form-generar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-generar-orden-giro/form-generar-orden-giro.component.html
@@ -40,7 +40,7 @@
                     Detalle del giro
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <app-accordion-detalle-giro-gog></app-accordion-detalle-giro-gog>
+            <app-accordion-detalle-giro-gog [solicitudPago]="solicitudPago"></app-accordion-detalle-giro-gog>
         </mat-expansion-panel>
     </mat-accordion>
 </section>
