--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-proyecto/tabla-informe-final-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-proyecto/tabla-informe-final-proyecto.component.html
@@ -15,13 +15,22 @@
 
 <div class="table-responsive mb-2em">
   <table mat-table [dataSource]="dataSource" matSort>
-    <!-- fechaTerminacionProyecto Column -->
-    <ng-container matColumnDef="fechaTerminacionProyecto">
+    <!-- fechaTerminacionObra Column -->
+    <ng-container matColumnDef="fechaTerminacionObra">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Fecha de terminación del proyecto
+        Fecha de terminación Obra del proyecto
       </th>
       <td mat-cell *matCellDef="let element">
-        <b>{{ element.fechaTerminacionProyecto | date: "dd/MM/yyyy" }}</b>
+        <b>{{ element.fechaTerminacionObra | date: "dd/MM/yyyy" }}</b>
+      </td>
+    </ng-container>
+    <!-- fechaTerminacionInterventoria Column -->
+    <ng-container matColumnDef="fechaTerminacionInterventoria">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Fecha de terminación Interventoría del proyecto
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <b>{{ element.fechaTerminacionInterventoria | date: "dd/MM/yyyy" }}</b>
       </td>
     </ng-container>
 
