--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/fuentes-usos-gbftrec/fuentes-usos-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/fuentes-usos-gbftrec/fuentes-usos-gbftrec.component.html
@@ -1,1 +1,73 @@
-<p>fuentes-usos-gbftrec works!</p>
+<mat-card class="shipping-card mainGris" style="margin-top: 3em;">
+    <mat-card-header class="header-card header-card--margin">
+        <mat-card-title class="header-card--text textoGris">
+            Fuentes y usos
+        </mat-card-title>
+    </mat-card-header>
+    <mat-card-content style="text-align: left;">
+        <div class="table-responsive text-center">
+            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+                <!--
+                <ng-container matColumnDef="aportante">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Aportante </th>
+                    <td mat-cell *matCellDef="let element"style="padding: 0 0em !important;">
+                        <div class="supportElement" *ngFor="let el of element.aportante ; let i = index">
+                            {{el.nombre}}
+                        </div>
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="valorAportante">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor aportante </th>
+                    <td mat-cell *matCellDef="let element" style="padding: 0 0em !important;">
+                        <div class="supportElement" *ngFor="let el of element.valorAportante ; let i = index">
+                            {{el.valor}}
+                        </div>
+                    </td>
+                </ng-container>
+            -->
+                <ng-container matColumnDef="aportante">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Aportante </th>
+                    <td mat-cell *matCellDef="let element"> <b>{{element.aportante}}</b></td>
+                </ng-container>
+                <ng-container matColumnDef="valorAportante">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor aportante </th>
+                    <td mat-cell *matCellDef="let element"> <b>{{element.valorAportante}}</b></td>
+                </ng-container>
+                <ng-container matColumnDef="fuenteAportante">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Fuente </th>
+                    <td mat-cell *matCellDef="let element" style="padding: 0 0em !important;">
+                        <div class="sub-item-table flex-table justify-content-center align-items-center h-3em"
+                            *ngFor="let el of element.fuenteAportante ; let i = index" [attr.rowspan]="element.fuenteAportante.length">
+                            {{el.fuente}}
+                        </div>
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="uso">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Uso </th>
+                    <td mat-cell *matCellDef="let element" style="padding: 0 0em !important;">
+                        <div *ngFor="let el of element.fuenteAportante ; let i = index">
+                            <div class="sub-item-table justify-content-center align-items-center h-3em"
+                         *ngFor="let el2 of el.uso ; let j = index">
+                                {{el2.nombre}}
+                            </div>
+                        </div>
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="valorUso">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor uso </th>
+                    <td mat-cell *matCellDef="let element" style="padding: 0 0em !important;">
+                        <div *ngFor="let el of element.fuenteAportante ; let i = index">
+                            <div class="sub-item-table justify-content-center align-items-center h-3em"
+                                *ngFor="let el2 of el.valorUso ; let j = index">
+                                {{el2.valor}}
+                            </div>
+                        </div>
+                    </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+            <!--<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>-->
+        </div>
+    </mat-card-content>
+</mat-card>
