--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/recursos-comprom-pagados-gbftrec/recursos-comprom-pagados-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/recursos-comprom-pagados-gbftrec/recursos-comprom-pagados-gbftrec.component.html
@@ -22,7 +22,7 @@
                         Contratistas
                     </mat-panel-title>
                 </mat-expansion-panel-header>
-                /*/*/*/
+                <app-contratistas-gbftrec></app-contratistas-gbftrec>
             </mat-expansion-panel>
         </mat-accordion>
         <mat-accordion>
@@ -32,7 +32,7 @@
                         Valor total ordenes de giro
                     </mat-panel-title>
                 </mat-expansion-panel-header>
-                /*/*/*/
+                <app-tabla-valor-total-og-gbftrec></app-tabla-valor-total-og-gbftrec>
             </mat-expansion-panel>
         </mat-accordion>
     </mat-expansion-panel>
@@ -59,7 +59,7 @@
                         Contratistas
                     </mat-panel-title>
                 </mat-expansion-panel-header>
-                /*/*/*/
+                <app-contratistas-gbftrec></app-contratistas-gbftrec>
             </mat-expansion-panel>
         </mat-accordion>
         <mat-accordion>
@@ -69,7 +69,7 @@
                         Valor total ordenes de giro
                     </mat-panel-title>
                 </mat-expansion-panel-header>
-                /*/*/*/
+                <app-tabla-valor-total-og-gbftrec></app-tabla-valor-total-og-gbftrec>
             </mat-expansion-panel>
         </mat-accordion>
     </mat-expansion-panel>
